--- a/docs/style.css
+++ b/docs/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,100,300,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,100,300,700);
 
 /**  Basic Page CSS **/
 body{
@@ -32,7 +32,7 @@ header .navbar-default {
 /**  Navbar Brand **/
 
 header .navbar-brand {
-    background: url(../src/images/wisdompetlogo.svg);
+    background: url(./wisdompetlogo.svg);
     background-repeat: no-repeat;
     background-position: 15px 0;
 }
